--- a/index.html
+++ b/index.html
@@ -135,13 +135,13 @@
           </li>
 
           <li>
-            <a href="https://www.youtube.com/@NaikBhaai" class="youtube social-link">
+            <a href="https://www.youtube.com/@Naayak_4" class="youtube social-link">
               <ion-icon name="logo-youtube"></ion-icon>
             </a>
           </li>
 
           <li>
-            <a href="https://www.instagram.com/naikbhaai/profilecard/?igsh=bmR5ZWpvb2lnMmQw" class="social-link">
+            <a href="https://www.instagram.com/naayak_4?igsh=bmR5ZWpvb2lnMmQw" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
