--- a/index.html
+++ b/index.html
@@ -135,16 +135,11 @@
           </li>
 
           <li>
-            <a href="https://www.youtube.com/@NaikBhaai" class="youtube social-link">
+            <a href="https://www.youtube.com/@naagendranaayak" class="youtube social-link">
               <ion-icon name="logo-youtube"></ion-icon>
             </a>
           </li>
 
-          <li>
-            <a href="https://www.instagram.com/naikbhaai/profilecard/?igsh=bmR5ZWpvb2lnMmQw" class="social-link">
-              <ion-icon name="logo-instagram"></ion-icon>
-            </a>
-          </li>
 
         </ul>
 
@@ -159,10 +154,10 @@
 
           <select name="currency">
 
-            <option value="usd">USD &dollar;</option>
             <option value="ind">IND ₹</option>
+            <option value="usd">USD &dollar;</option>
             <option value="eur">EUR &euro;</option>
-
+            
           </select>
 
           <select name="language">
@@ -1426,8 +1421,8 @@
                     </div>
 
                     <div class="price-box">
-                      <del>₹ 299.00</del>
-                      <p class="price">₹ 699.00</p>
+                      <del>₹ 699.00</del>
+                      <p class="price">₹ 299.00</p>
                     </div>
 
                   </div>
@@ -1455,8 +1450,8 @@
                     </div>
 
                     <div class="price-box">
-                      <del>₹ 799.00</del>
-                      <p class="price">₹ 1499.00</p>
+                      <del>₹ 1499.00</del>
+                      <p class="price">₹ 799.00</p>
                     </div>
 
                   </div>
@@ -1484,8 +1479,8 @@
                     </div>
 
                     <div class="price-box">
-                      <del>₹ 459.00</del>
-                      <p class="price">₹ 759.00</p>
+                      <del>₹ 759.00</del>
+                      <p class="price">₹ 459.00</p>
                     </div>
 
                   </div>
@@ -1513,8 +1508,8 @@
                     </div>
 
                     <div class="price-box">
-                      <del>₹ 249.00</del>
-                      <p class="price">₹ 599.00</p>
+                      <del>₹ 699.00</del>
+                      <p class="price">₹ 249.00</p>
                     </div>
 
                   </div>
@@ -1562,7 +1557,7 @@
                       <a href="#" class="showcase-category">Clothes</a>
 
                       <div class="price-box">
-                        <p class="price">₹ 899.00</p>
+                        <p class="price">₹ 799.00</p>
                         <del>₹ 1599.00</del>
                       </div>
 
